# llm-spanish-lexicon-eval

./: .gitignore  LICENSE  README.md  data_loader.py  definitions.json  evaluator.py  generate_vocab_mcq.py  main.py  model_client.py  pyproject.toml  reporter.py  results.csv  storage.py  summary.json  words.txt
.github/instructions/: python.instructions.md
.github/prompts/: build-eval-script.prompt.md  system-build.prompt.md  systembuild.prompt.md
.github/workflows/: test.yml
suite/: cloze_mcq.jsonl  everyday_qa.jsonl  mcq_reasoning.jsonl  models_list.txt  prompta.txt  promptb.txt  reading_comprehension.jsonl  vocabulary_complete.json
tests/: README.md  conftest.py  test_data_loader.py  test_evaluator.py  test_model_client.py  test_reporter.py  test_storage.py
