[project]
name = "llm-spanish-lexicon-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.6",
    "openai>=1.101.0",
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "ollama>=0.3.3",
    "python-dotenv>=1.0.1",
    "tqdm>=4.66.5",
]
