[project]
name = "llm-spanish-lexicon-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.101.0",
    "ollama>=0.3.3",
    "python-dotenv>=1.0.1",
    "tqdm>=4.66.5",
    "pydantic>=2.9.0",
    "rich>=14.1.0",
]
